--- a/assets/style.css
+++ b/assets/style.css
@@ -68,10 +68,11 @@ header {
 
 .header__inner {
   max-width: 1168px;
-  height: 30.24px;
+  width: 100%;
+  height: 50.24px;
   margin: 28px auto;
   margin-top: -0.88px;
-  padding-top: 40px;
+  padding-top: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -239,6 +240,10 @@ main {
   line-height: 122%;
 
   color: #1b1f2b;
+
+  color: #1b1f2b;
+  cursor: pointer;
+  border-bottom: 2px solid transparent;
 }
 .main__link.active {
   line-height: 122%;
@@ -563,7 +568,9 @@ option:checked {
 .lab_inp input:focus,
 .lab_inp input:active,
 .lab_inp textarea:focus,
-.lab_inp textarea:active {
+.lab_inp textarea:active,
+.lab_inp select:focus,
+.lab_inp select:active {
   outline: 1px solid var(--Gray-300, #a6a6a6);
   border: 1px solid var(--Gray-300, #a6a6a6);
 }
@@ -892,28 +899,24 @@ label span:hover {
 .img__line:last-child {
   margin: 0;
 }
-.firstLine,
-.thirdLine {
-  width: 97%;
-}
+
 .firstLine img {
-  width: 23.8%;
+  width: 442.5px;
   height: 301px;
   border-radius: 50px;
 }
 .secondLine img {
-  width: 18.2%;
+  width: 349px;
   height: 301px;
   border-radius: 50px;
 }
 .secondLine {
-  width: 97%;
   display: flex;
   justify-content: space-between;
   justify-items: center;
 }
 .thirdLine img {
-  width: 23.8%;
+  width: 442.5px;
   height: 301px;
 
   border-radius: 50px;
@@ -1182,11 +1185,48 @@ span a:active {
   border-color: #a6a6a6;
   background: #f4f0e9;
 }
+@media (max-width: 1860px) {
+  .firstLine img {
+    width: 400px;
+    height: 301px;
+    border-radius: 50px;
+  }
+  .secondLine img {
+    width: 314px;
+    height: 301px;
+    border-radius: 50px;
+  }
 
+  .thirdLine img {
+    width: 400px;
+    height: 301px;
+
+    border-radius: 50px;
+  }
+}
+
+@media (max-width: 1700px) {
+  .firstLine img:nth-child(2),
+  .secondLine img:nth-child(2),
+  .thirdLine img:nth-child(4) {
+    display: none;
+  }
+}
+@media (max-width: 1360px) {
+  .firstLine img,
+  .thirdLine img {
+    width: 314.5px;
+    height: 301px;
+  }
+  .secondLine img {
+    width: 231px;
+    height: 301px;
+  }
+}
 @media (max-width: 1024px) {
   .header__inner {
     max-width: 910px;
-    margin: 28.88px;
+    margin: 28.88px auto;
     margin-top: -0.88px;
   }
   .intro {
@@ -1270,7 +1310,260 @@ span a:active {
     font-size: 17px;
   }
 }
+@media (max-width: 850px) {
+  .card__item p {
+    font-size: 18px;
+  }
+  .avtor__description h1 {
+    font-size: 24px;
+  }
+  .avtor img {
+    width: 50px;
+    height: 50px;
+  }
 
+  .footer__content {
+    gap: 0;
+  }
+}
+@media (max-width: 950px) {
+  .header__inner {
+    max-width: 800px;
+    width: 100%;
+    margin: 28.88px auto;
+    margin-top: -0.88px;
+  }
+  .tabs__main {
+    box-sizing: border-box;
+    flex-wrap: wrap;
+    width: 100vw;
+    gap: 10px;
+    padding: 0 51.5px;
+    margin: 30px auto;
+  }
+  .header__nav {
+    display: none;
+  }
+  .header__main {
+    width: 500px;
+  }
+  .main__link {
+    font-size: 18px;
+  }
+  .tabs__main {
+    width: 100%;
+  }
+  .popular__block {
+    display: grid;
+    gap: 18px;
+    grid-template-columns: repeat(1, 1fr);
+    max-width: 318px;
+  }
+  .popular__item {
+    width: 518px;
+    height: 518px;
+    border-radius: 20px;
+  }
+  .popular__back {
+    width: 518px;
+    height: 518px;
+    padding: 25px;
+    border-radius: 20px;
+  }
+  .item__title p {
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+  }
+  .group__title {
+    font-size: 24px;
+  }
+  form {
+    width: 100%;
+    height: 100%;
+  }
+  .form__block {
+    flex-direction: column;
+    align-items: center;
+  }
+  .lab_inp {
+    width: 100%;
+  }
+  .lab_inp input,
+  select {
+    width: 100%;
+  }
+
+  .firstLine img:nth-child(2),
+  .firstLine img:nth-child(3),
+  .secondLine img:nth-child(2),
+  .secondLine img:nth-child(3),
+  .thirdLine img:nth-child(4),
+  .thirdLine img:nth-child(3) {
+    display: none;
+  }
+}
+@media (max-width: 615px) {
+  .story__desc h3 {
+    margin-bottom: 20px;
+    font-size: 23px;
+    margin-right: 110px;
+  }
+  .story__desc p,
+  li {
+    font-size: 20px;
+    width: auto;
+  }
+  .item__btn {
+    padding: 0%;
+    font-size: 20px;
+  }
+  .social__media {
+    display: none;
+  }
+  .last__main img {
+    width: 130px;
+    height: 133px;
+    border-radius: 20px;
+  }
+  .last__main {
+    flex-direction: column;
+    width: auto;
+    height: auto;
+    padding: 0px 30px;
+    margin-top: 75px;
+    margin-bottom: 75px;
+  }
+}
+@media (max-width: 660px) {
+  .intro__title {
+    font-size: 55px;
+    width: 100%;
+    height: 100%;
+  }
+  .main__title {
+    font-size: 40px;
+  }
+  .header__main {
+    width: 400px;
+  }
+  .main__link {
+    font-size: 18px;
+  }
+  .tabs__main {
+    width: 100%;
+  }
+  .popular__block {
+    display: grid;
+    gap: 18px;
+    grid-template-columns: repeat(1, 1fr);
+    max-width: 318px;
+  }
+  .popular__item {
+    width: 418px;
+    height: 418px;
+    border-radius: 20px;
+  }
+  .popular__back {
+    width: 418px;
+    height: 418px;
+    padding: 25px;
+    border-radius: 20px;
+  }
+  .item__title p {
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+  }
+  .group__title {
+    font-size: 24px;
+  }
+  .twoBtn {
+    gap: 10px;
+  }
+  .twoBtn input {
+    width: 134px;
+    height: 47px;
+    padding: 0;
+    font-size: 16px;
+  }
+
+  .twoBtn button {
+    font-size: 16px;
+    width: 134px;
+    height: 47px;
+  }
+  .comment input {
+    width: 278px;
+    height: 132px;
+  }
+  .card__reviews {
+    flex-direction: column;
+  }
+  .card__item {
+    height: 100%;
+    width: 100%;
+  }
+  .footer__content {
+    width: 318px;
+    height: 28px;
+    flex-direction: column;
+    gap: 0;
+  }
+  footer a {
+    font-size: 16px;
+  }
+  .nav__social {
+    gap: 5px;
+  }
+  footer h3 {
+    font-size: 16px;
+  }
+}
+@media (max-width: 460px) {
+  .header__main {
+    width: 350px;
+  }
+  .popular__block {
+    display: grid;
+    gap: 18px;
+    grid-template-columns: repeat(1, 1fr);
+    max-width: 350px;
+  }
+  .popular__item {
+    width: 350px;
+    height: 350px;
+    border-radius: 20px;
+  }
+  .popular__back {
+    width: 350px;
+    height: 350px;
+    padding: 25px;
+    border-radius: 20px;
+  }
+  .nav__social svg {
+    width: 22px;
+    height: 22px;
+  }
+  .nav__social span {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 142%;
+    /* or 28px */
+
+    /* Black */
+
+    color: #1b1f2b;
+  }
+  .block__footer .nav__social {
+    gap: 5px;
+  }
+  .block__footer {
+    gap: 15px;
+  }
+}
 @media (max-width: 360px) {
   .header__inner {
     max-width: 318px;
